# longcut

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  ordinator.yaml  testing-config.yaml
.github/workflows/: ci.yml
examples/: longcut.yaml
longcut-application/: Cargo.toml  Makefile  run-with-testing-config.sh  testing-config.yaml
longcut-application/src/: main.rs
longcut-application/test-data/: semantically-invalid-config.yaml  syntactically-invalid-config.yaml  valid-config.yaml
longcut-config/: Cargo.toml
longcut-config/src/: lib.rs  module.rs  yaml.rs
longcut-config/tests/: invalid_config.yaml  valid_config.yaml  yaml_test.rs
longcut-core/: Cargo.toml  README.md
longcut-core/src/: config.rs  lib.rs  module.rs  service.rs
longcut-core/src/logic/: activation.rs  command_execution.rs  error.rs  inactive.rs  layer_navigation.rs  layer_stack.rs  mod.rs  parameter_input.rs
longcut-core/src/mode/: command_execution.rs  error.rs  inactive.rs  layer_navigation.rs  mod.rs  parameter_input.rs
longcut-core/src/model/: command.rs  effect.rs  event.rs  key.rs  layer.rs  mod.rs  parameter.rs  shortcut_map.rs
longcut-core/src/port/: executor.rs  input.rs  mod.rs  view.rs  window_manager.rs
longcut-gdk/: Cargo.toml
longcut-gdk/adapter-longcut-gui/: Cargo.toml
longcut-gdk/adapter-longcut-gui/src/: lib.rs  window_manager.rs
longcut-gdk/src/: config.rs  gui.rs  handle.rs  lib.rs  module.rs  renderer.rs  service.rs  window.rs
longcut-gdk/src/adapter/: graphics_lib_renderer.rs  gui_renderer.rs  gui_window_manager.rs  mod.rs  view.rs  window_manager.rs
longcut-gdk/src/component/: action.rs
longcut-gdk/src/screen/: error.rs  layer_navigation.rs  parameter_input.rs
longcut-graphics-lib/: Cargo.toml
longcut-graphics-lib/src/: context.rs  lib.rs  property.rs
longcut-graphics-lib/src/component/: column.rs  mod.rs  root.rs  row.rs  table.rs  text.rs
longcut-graphics-lib/src/model/: alignment.rs  color.rs  dimensions.rs  font.rs  mod.rs  position.rs  unit.rs
longcut-graphics-lib/src/port/: renderer.rs
longcut-gtk/: Cargo.toml
longcut-gtk/adapter-longcut-gui/: Cargo.toml
longcut-gtk/adapter-longcut-gui/src/: lib.rs  window_manager.rs
longcut-gtk/src/: handle.rs  lib.rs  module.rs  service.rs  window.rs  x11_platform.rs
longcut-gui/: Cargo.toml  README.md
longcut-gui/adapter-longcut-core/: Cargo.toml
longcut-gui/adapter-longcut-core/src/: lib.rs  view.rs
longcut-gui/src/: config.rs  context.rs  lib.rs  module.rs  property.rs  service.rs  theme.rs
longcut-gui/src/adapter/: view.rs
longcut-gui/src/component/: action.rs  column.rs  empty.rs  layer_stack.rs  mod.rs  root.rs  row.rs  shortcut.rs  table.rs
longcut-gui/src/model/: mod.rs  position.rs  theme.rs  window_properties.rs
longcut-gui/src/port/: mod.rs  renderer.rs  window_manager.rs
longcut-gui/src/screen/: error.rs  layer_navigation.rs  mod.rs  parameter_input.rs
longcut-linux/: Cargo.toml
longcut-linux/src/: main.rs
longcut-linux/src/config/: mod.rs
longcut-linux/src/gdk/: config.rs  gui.rs  mod.rs
longcut-linux/src/gdk/component/: action.rs  mod.rs  shortcut.rs
longcut-linux/src/gdk/screen/: error.rs  layer_navigation.rs  mod.rs  parameter_input.rs
longcut-linux/src/system/: mod.rs
longcut-linux/src/x11/: mod.rs  raw.rs
longcut-shell/: Cargo.toml  README.md
longcut-shell/adapter-longcut-core/: Cargo.toml
longcut-shell/adapter-longcut-core/src/: executor.rs  lib.rs
longcut-shell/src/: config.rs  lib.rs  module.rs  service.rs
longcut-shell/src/adapter/: executor.rs
longcut-x11/: Cargo.toml
longcut-x11/adapter-longcut-core/: Cargo.toml
longcut-x11/adapter-longcut-core/src/: input.rs  lib.rs  window_manager.rs
longcut-x11/src/: handle.rs  lib.rs  module.rs
longcut-x11/src/adapter/: input.rs
longcut-xcb/: Cargo.toml
longcut-xcb/adapter-longcut-gui/: Cargo.toml
longcut-xcb/adapter-longcut-gui/src/: lib.rs  window_manager.rs
longcut-xcb/src/: lib.rs  module.rs  service.rs  visual.rs  window.rs
ordinator-core/: Cargo.toml
ordinator-core/src/: lib.rs
ordinator-core/src/logic/: activation.rs  command_execution.rs  error.rs  layer_stack.rs  mod.rs  program.rs  state_machine.rs
ordinator-core/src/model/: command.rs  effect.rs  event.rs  key.rs  layer.rs  mod.rs  shortcut_map.rs  state.rs
ordinator-core/src/model/state_machine/: mod.rs  state.rs  transition.rs  view.rs
ordinator-core/src/port/: executor.rs  input.rs  mod.rs  view.rs
ordinator-gui/: Cargo.toml
ordinator-gui/src/: lib.rs
ordinator-gui/src/component/: column.rs  mod.rs  row.rs  table.rs  text.rs
ordinator-gui/src/model/: alignment.rs  dimensions.rs
ordinator-gui/src/port/: renderer.rs
ordinator-gui/src/primitive/: mod.rs
ordinator-gui/src/property/: background.rs  foreground.rs  margin.rs  mod.rs  size.rs
ordinator-linux/: Cargo.toml
ordinator-linux/src/: main.rs
ordinator-linux/src/config/: mod.rs  yaml.rs
ordinator-linux/src/gdk/: config.rs  gui.rs  mod.rs  renderer.rs  view_model.rs  window.rs
ordinator-linux/src/gdk/component/: action.rs  column.rs  mod.rs  rectangle.rs  row.rs  shortcut.rs  text.rs
ordinator-linux/src/gdk/screen/: error.rs  layer_navigation.rs  parameter_input.rs
ordinator-linux/src/gtk/: config.rs  gui.rs  mod.rs  view_model.rs  viewmodel.rs
ordinator-linux/src/system/: mod.rs
ordinator-linux/src/x11/: mod.rs  raw.rs
src/: main.rs
src/core/: mod.rs  model.rs
src/core/model/: key.rs  mod.rs
src/core/port/: controller.rs  view.rs
src/gtk/: gui.rs  mod.rs  viewmodel.rs
src/mock/: controller.rs
src/x11/: mod.rs  raw.rs
