[workspace]
resolver = "3"
members = [
    "longcut-gtk",
    "longcut-gtk/adapter-longcut-gui",
    "longcut-config",
    "longcut-shell",
    "longcut-shell/adapter-longcut-core",
    "longcut-graphics-lib",
    "longcut-x11",
    "longcut-x11/adapter-longcut-core",
    "longcut-application",
    "longcut-core",
    "longcut-gui",
    "longcut-gui/adapter-longcut-core",
]

[workspace.package]
authors = ["Sami Jokela"]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
cairo-rs = "0.20"
gdk4 = "0.9"
gdk4-x11 = { version = "0.9", features = ["xlib"] }
gtk4 = "0.9"
hex = "0.4.3"
itertools = "0.14.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serial_test = "3.4.0"
wait-timeout = "0.2.1"
x11 = { version = "2.21.0", features = ["xlib"] }
