[package]
name = "longcut-application"
authors.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "longcut"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.1", features = ["derive"] }
dirs = "5.0.1"
longcut-config = { path = "../longcut-config" }
longcut-core = { path = "../longcut-core" }
longcut-gdk = { path = "../longcut-gdk" }
longcut-gui = { path = "../longcut-gui" }
longcut-shell = { path = "../longcut-shell" }
longcut-x11 = { path = "../longcut-x11" }

