[package]
name = "longcut-application"
authors.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "longcut"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.1", features = ["derive"] }
dirs = "5.0.1"
longcut-gdk = { path = "../longcut-gdk" }
longcut-gdk-adapter-longcut-gui = { path = "../longcut-gdk/adapter-longcut-gui" }
longcut-config = { path = "../longcut-config" }
longcut-shell = { path = "../longcut-shell" }
longcut-shell-adapter-longcut-core = { path = "../longcut-shell/adapter-longcut-core" }
longcut-x11 = { path = "../longcut-x11" }
longcut-x11-adapter-longcut-core = { path = "../longcut-x11/adapter-longcut-core" }
longcut-core = { path = "../longcut-core" }
longcut-gui = { path = "../longcut-gui" }
adapter-longcut-gui-longcut-core = { path = "../longcut-gui/adapter-longcut-core" }
