[package]
name = "longcut-gdk"
version = "0.1.0"
authors = ["Sami Jokela"]
edition = "2021"

[dependencies]
gdk = { version = "0.14", features = ["v3_22"] }
longcut-gui = { path = "../longcut-gui" }
longcut-graphics-lib = { path = "../longcut-graphics-lib" }
longcut-config = { path = "../longcut-config" }
