[package]
name = "longcut-gtk"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
longcut-config = { path = "../longcut-config" }

cairo-rs.workspace = true
gdk4.workspace = true
gdk4-x11.workspace = true
gtk4.workspace = true
x11.workspace = true
