[package]
name = "longcut-gui"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
longcut-config = { path = "../longcut-config" }
longcut-core = { path = "../longcut-core" }
longcut-graphics-lib = { path = "../longcut-graphics-lib" }

itertools.workspace = true
serde.workspace = true
