[package]
name = "longcut-xcb"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
longcut-config = { path = "../longcut-config" }

cairo-rs = { workspace = true, features = ["xcb"] }
x11rb = { workspace = true, features = ["randr"] }
