[package]
name = "ordinator-linux"
version = "0.1.0"
authors = ["Sami Jokela"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordinator-core = { path = "../ordinator-core" }
gtk = { version = "0.14", features = ["v3_22"] }
gio = { version = "0.14" }
glib = { version = "0.14" }
itertools = { version = "0.10.0" }
x11 = { version = "2.18.2", features = ["xlib"] }
