[package]
name = "longcut-gdk-adapter-longcut-gui"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
longcut-gdk = { path = ".." }
longcut-graphics-lib = { path = "../../longcut-graphics-lib" }
longcut-gui = { path = "../../longcut-gui" }

gdk.workspace = true