[package]
name = "longcut-gtk-adapter-longcut-gui"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
longcut-gtk = { path = ".." }
longcut-graphics-lib = { path = "../../longcut-graphics-lib" }
longcut-gui = { path = "../../longcut-gui" }

cairo-rs.workspace = true
