[package]
name = "longcut-xcb-adapter-longcut-gui"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
longcut-xcb = { path = ".." }
longcut-graphics-lib = { path = "../../longcut-graphics-lib" }
longcut-gui = { path = "../../longcut-gui" }

cairo-rs.workspace = true
